GMU-45 - Implement function to set LDR05 to "d" for records set for deletion (#80)